objects/OrderLineItem__c.object
<CustomObject>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderCustom__c</fullName>
        <label>OrderCustom</label>
        <referenceTo>OrderCustom__c</referenceTo>
        <relationshipLabel>OrderLineItems</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>OrderLineItems</relationshipLabel>
        <relationshipName>OrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>The total no of items to be
included in the order</inlineHelpText>
        <label>Quantity</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Quantity__c  *  Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>OrderLineItem</label>
    <nameField>
        <displayFormat>OLI-{000000}</displayFormat>
        <label>OrderLineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>